--- a/app/src/main/res/layout/category_rb.xml
+++ b/app/src/main/res/layout/category_rb.xml
@@ -2,78 +2,105 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    tools:context=".NewCategoryActivity">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="412dp"
-        android:layout_height="127dp"
-        tools:layout_editor_absoluteX="-1dp"
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/my_primary_color"
+        android:orientation="vertical"
+
         tools:layout_editor_absoluteY="2dp">
 
-        <LinearLayout
-            android:layout_width="394dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/iv2_back"
+            android:layout_width="30dp"
+            android:layout_height="45dp"
+            android:src="@drawable/ic_arrow_back_24" />
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/rb_im_category"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_launcher_background"
-                app:civ_border_color="#9C27B0"
-                app:civ_border_width="2dp" />
+        <TextView
+            android:id="@+id/textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="@string/text_new_category" />
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="410dp"
+            android:layout_height="189dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_width="391dp"
+                android:layout_height="191dp"
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Nombre:"
-                    android:textStyle="bold" />
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tvNameCategory"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:text="nombre servi"
-                    android:textStyle="bold" />
+                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/rb_im_category"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_launcher_background"
+                    app:civ_border_color="#9C27B0"
+                    app:civ_border_width="2dp" />
 
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="15dp"
-                    android:text="color:"
-                    android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/tvColorCategory"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#090909"
-                    app:rippleColor="#2196F3" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Nombre:"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvNameCategory"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:text="nombre servi"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:text="color:"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/tvColorCategory"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="#090909"
+                        app:rippleColor="#2196F3" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="300dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
+
             </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="300dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-
-                app:srcCompat="@android:drawable/ic_menu_delete" />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
